# Atomic-Agentic

./: .gitignore  README.md  agentic_story_builder.py  atomic_ui.py  orchestrating_planners.py  plugins_test.py  pyproject.toml  requirements.txt  test_async_planner.py
.venv2/: pyvenv.cfg
.venv2/Scripts/: activate  activate.bat
atomic_agents/: Agents.py  PlanExecutors.py  Plugins.py  Prompts.py
examples/: agentic_story_builder.py  orchestrating_planners.py  plugins_test.py  test_async_planner.py
examples/A2A_Examples/: 01_A2AgentTool.py  a2a_echo_client.py  a2a_echo_server.py  a2a_proxy.py  a2a_shakespearean_client.py  a2a_shakespearean_server.py  inter_agent_host_server.py  math_host_server.py  planner_server.py  planner_w_a2a.py  shakespearean_server.py  trivia_host_server.py  trivia_server.py
examples/Agent_Examples/: 01_Chatbot_Test.py  02_File_Attach_Test.py  03_Schema_Test.py  04_History_Test.py  04_dehydration_rehydration.py  05_Passthrough_Test.py  README  README.md  agent_test.py  chatbot_agent_test.py  file_summarization.py  gemini_agent_test.py  mistral_agent_test.py  openai_agent_test.py  slm_agent_test.py
examples/Agentic_Research/: AtomicGraphResearcher.py  AtomicWorkflowResearcher.py  researcher_agents.py  researcher_tools.py
examples/ChainSequence_Examples/: 01_unit_chain_programmer.py  02_cpp_to_python_chainsequence.py  03_chainsequence_story_builder.py  04_cycle_detection_test.py
examples/LLM_Examples/: 01_llm_invokable_demo.py
examples/Orchestrator_Examples/: 01_tool_orchestrator_test.py  02_orchestrating_agents.py  03_human_in_the_loop.py
examples/PlanAct_Examples/: 00_plan_test.py  01_plugins_test.py  02_async_planner_test.py  03_agentic_story_builder.py  04_planner_delegator.py  05_mcp_planner_test.py  06_context_enabled_planner.py  07_pydantic_integration.py  test_http.py  test_sse.py  test_stdio.py
examples/Planner_Examples/: 00_plan_test.py  01_plugins_test.py  02_async_planner_test.py  03_agentic_story_builder.py  04_orchestrating_planners.py  04_planner_delegator.py  05_mcp_planner_test.py  05_mcpo_planner_test.py  06_context_enabled_planner.py  orchestrating_planners.py  plugins_test.py  sample_mcp_server.py
examples/Polymer_Examples/: 01_monomer_programmer.py  02_cpp_to_python_polymer.py  03_polymer_story_builder.py  04_cycle_detection_test.py  monomer_programmer.py  polymer_story_builder.py
examples/PrePost_Examples/: 01_coder_build_and_run.py
examples/RAG_Examples/: 01_EmbedEngine.py
examples/ReAct_Examples/: 01_tool_orchestrator_test.py  02_orchestrating_agents.py
examples/Tool_Examples/: 00_Call_vs_Invoke.py  01_Tool.py  02_Arguments_Test.py  03_AdapterTool.py  03_AgentTool.py  04_MCPProxyTool.py  05_A2AProxyTool.py  05_PyA2AtomicTool.py  05_toolify_example.py  06_dehydrate_rehydrate.py  06_toolify_example.py  Tools.ipynb  inter_agent_host_server.py  math_host_server.py  sample_mcp_server.py  trivia_host_server.py
examples/Workflow_Examples/: 00_ToolFlow.py  01_AgentFlow.py  01_BasicFlow_Tools.py  01_SingleAgent.py  01_StructuredInvokable.py  01_ToolFlow.py  02_AgentFlow.py  02_BasicFlow.py  02_BasicFlow_Agents.py  02_ChainFlow.py  02_ChainOfThought.py  03_AbsentValPolicy.py  03_AdapterFlow.py  03_MakerChecker.py  03_SequentialFlow.py  04_AbsentValPolicy.py  04_ConditionalWorkflow.py  04_LangGraph_Integration.py  04_ParallelFlow.py  04_Selector.py  04_StateIOFlow.py  05_BatchFlow.py  05_Delegator.py  05_MapFlow.py  05_RoutingFlow.py  05_SequentialFlow.py  05_StateIOFlow.py  06_Checkpoint_Tests.py  06_IterativeFlow.py  06_MakerCheckerFlow.py  06_Research_Report_Example.py  06_ScatterFlow.py  06_ToolWorkflow.py  07_HybridFlow.py  07_LangGraphFlow.py  07_PDF_Analyzer.py
modules/: A2Agents.py  Agents.py  EmbedEngines.py  LLMEngines.py  LLMNuclei.py  OrchestratorAgents.py  PlanExecutors.py  PlannerAgents.py  Plugins.py  Prompts.py  ToolAdapters.py  ToolAgents.py  Tools.py  Workflows.py
src/atomic_agentic/: A2Agents.py  Agents.py  EmbedEngines.py  Exceptions.py  Factory.py  LLMEngines.py  Plugins.py  Primitives.py  Prompts.py  ToolAdapters.py  ToolAgents.py  Toolify.py  Tools.py  Workflows.py  __init__.py  __utils__.py  _exceptions.py  _primitives.py
src/atomic_agentic/a2a/: A2AHost.py  A2AgentHost.py  A2AtomicHost.py  PyA2AtomicClient.py  PyA2AtomicHost.py  __init__.py
src/atomic_agentic/agents/: __init__.py  base.py  data_classes.py  tool_agents.py  toolagents.py
src/atomic_agentic/core/: Exceptions.py  Invokable.py  Parameters.py  Prompts.py  __init__.py  sentinels.py
src/atomic_agentic/engines/: EmbedEngines.py  LLMEngines.py
src/atomic_agentic/mcp/: MCPClientHub.py  __init__.py  utils.py
src/atomic_agentic/tools/: Plugins.py  Toolify.py  __init__.py  a2a.py  adapter.py  base.py  invokable.py  mcp.py  toolify.py
src/atomic_agentic/workflows/: StructuredInvokable.py  Workflows.py  __init__.py  base.py  basic.py  composites.py  iterative.py  metadata.py  parallel.py  routing.py  sequential.py  stateio.py
tests/a2a/: test_client.py  test_host.py
tests/agents/: test_base_agent.py  test_data_classes.py  test_tool_agents.py
tests/core/: test_exceptions.py  test_invokable.py  test_parameters.py  test_sentinels.py
tests/engines/: test_llm_engines.py
tests/integration/: test_agent_structured_basic_pipeline.py  test_composite_workflows.py  test_live_agent_structured_basic_pipeline.py  test_live_llm_engines.py
tests/mcp/: test_client_hub.py  test_utils.py
tests/tools/: test_a2a_tool.py  test_adapter.py  test_base_tool.py  test_mcp_tool.py  test_plugins.py  test_toolify.py
tests/workflows/: test_base_workflow.py  test_basic_flow.py  test_iterative_flow.py  test_metadata.py  test_parallel_flow.py  test_routing_flow.py  test_sequential_flow.py  test_structured_invokable.py
