[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-agentic"
description = "Provider-agnostic, schema-driven tools, agents, and workflows for building agentic systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]

authors = [{ name = "gearsngenes" }]
keywords = ["agents", "workflows", "tools", "LLM", "RAG", "MCP", "A2A"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Development Status :: 3 - Alpha"
]

# Core deps — importable everywhere, with MCP/A2A made mandatory per your request.
dependencies = [
  "pydantic>=2",
  "python-dotenv",
  "requests",
  "mcp",             # Model Context Protocol Python SDK
  "python-a2a",      # Agent-to-Agent (A2A) SDK
  "uvicorn",         # ASGI server commonly used to host MCP/A2A endpoints
  "mcpo",            # MCP→OpenAPI proxy utility
  "uv"               # included as requested; primarily a CLI/tooling package
]

[project.optional-dependencies]
# LLM / embedding providers (kept optional)
openai      = ["openai"]
gemini      = ["google-genai"]       # official SDK exposes `from google import genai`
mistral     = ["mistralai"]
llama       = ["llama-cpp-python", "huggingface-hub"]

# Demo UI
demo = ["streamlit"]

# Convenience bundle for all optional providers + demo (explicitly expanded for tool compatibility)
full = [
  "openai",
  "google-genai",
  "mistralai",
  "llama-cpp-python",
  "huggingface-hub",
  "streamlit"
]

[project.urls]
Homepage = "https://github.com/gearsngenes/Atomic-Agentic"
Issues   = "https://github.com/gearsngenes/Atomic-Agentic/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomic_agentic = ["py.typed"]

[tool.setuptools_scm]
version_file = "src/atomic_agentic/_version.py"
