[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "atomic-agentic"
description = "Provider-agnostic, schema-driven tools, agents, and workflows for building agentic systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]

authors = [{ name = "gearsngenes" }]
keywords = ["agents", "workflows", "tools", "LLM", "RAG", "MCP", "A2A"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Development Status :: 3 - Alpha"
]

# Core deps — direct runtime imports only.
dependencies = [
  "mcp>=1.25,<2",
  "python-a2a>=0.5.10,<0.6",
  "httpx>=0.28.1,<0.29",
  "openai>=2.15,<3",
  "google-genai>=1.64,<2",
  "mistralai>=1.12,<2",
]

[project.optional-dependencies]
# Llama / local model support.
llama = [
  "llama-cpp-python>=0.3.16,<0.4",
  "huggingface-hub>=1.5,<2",
]

# Development / test tooling only. Not required at runtime.
dev = [
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
]

[project.urls]
Homepage = "https://github.com/gearsngenes/Atomic-Agentic"
Issues   = "https://github.com/gearsngenes/Atomic-Agentic/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomic_agentic = ["py.typed"]

[tool.setuptools_scm]
version_file = "src/atomic_agentic/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "examples",
  "test_code",
]

[tool.coverage.run]
source = ["atomic_agentic"]
branch = true
omit = [
    "*/atomic_agentic/_version.py",
    "*/atomic_agentic/engines/EmbedEngines.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "pragma: no cover",
]
omit = [
    "*/atomic_agentic/_version.py",
    "*/atomic_agentic/engines/EmbedEngines.py",
]